更新了说明

--- a/TODO
+++ b/TODO
@@ -5,3 +5,6 @@
 基础垃圾桶：为0，随机噪声，恒等映射
 
 loss的约束：根据token长度不同，根据激活比例来看，负载均衡。
+
+分离模型修改与加载模型的流程。使用一个脚本来单独地修改OLMOE模型，并且保存模型到本地。在其他脚本中则统一加载该模型即可。
+按照微调流水线中的说法再次重构代码。
