--- a/TODO
+++ b/TODO
@@ -6,5 +6,13 @@
 
 loss的约束：根据token长度不同，根据激活比例来看，负载均衡。
 
-分离模型修改与加载模型的流程。使用一个脚本来单独地修改OLMOE模型，并且保存模型到本地。在其他脚本中则统一加载该模型即可。
-按照微调流水线中的说法再次重构代码。
+LESS是在FLAN V2、CoT、DOLLY、OPEN ASSISTANT 1的四个混合数据集上预热训练的。然后根据不同的任务去进行数据选择。例如：mmlu-chat_adam_sim_trainp0.05_seed3_p0.05，这表示其针对MMLU数据集的chat任务，使用adam优化器，模拟训练集的比例为0.05，随机种子为3。需要从什么数据集中选择数据，就在什么数据集上预热。
+在LESS的阶段2，它使用了traker库来对单一训练集获取梯度存储（使用随机投影方法）
+在第三步中，它需要指定源训练集和单个目标任务，从而挑选出真正的训练集。
+
+也就是说，如果现在有训练集D1到DN，那么就要把D1到DN的所有数据集都混合得到D，并完成预热训练。
+再对D1到DN都获取梯度存储。
+根据不同的任务，选择不同的源训练集和目标任务，挑选出真正的训练集。
+
+1. 加入LESS所用的四个数据集，完成对其的预处理和加载。
+2. 
