--- a/TODO
+++ b/TODO
@@ -14,5 +14,7 @@ LESS是在FLAN V2、CoT、DOLLY、OPEN ASSISTANT 1的四个混合数据集上预
 再对D1到DN都获取梯度存储。
 根据不同的任务，选择不同的源训练集和目标任务，挑选出真正的训练集。
 
+一个自然而然的疑问是：我们的方法不需要指定任务。如果是同样挑选5%的数据的话，我们会将这5%的数据用于一次训练，然后在多个任务上测试。但LESS会在每个任务上各挑选5%的数据进行训练。如果进行更公平的比较？
+
 1. 加入LESS所用的四个数据集，完成对其的预处理和加载。
 2. 
