使用LESS的做法来处理数据加载，确保了加载流程没有问题。

--- a/TODO
+++ b/TODO
@@ -16,5 +16,6 @@ LESS是在FLAN V2、CoT、DOLLY、OPEN ASSISTANT 1的四个混合数据集上预
 
 一个自然而然的疑问是：我们的方法不需要指定任务。如果是同样挑选5%的数据的话，我们会将这5%的数据用于一次训练，然后在多个任务上测试。但LESS会在每个任务上各挑选5%的数据进行训练。如果进行更公平的比较？
 
-1. 加入LESS所用的四个数据集，完成对其的预处理和加载。
+跑通四个流程：
+1. 在极小的子集上预热训练
 2. 
