--- a/TODO
+++ b/TODO
@@ -95,6 +95,16 @@ Lora：r=128, alpha=512, dropout=0.1, attention的所有参数，
 CUDA_VISIBLE_DEVICES=2 back scripts/run_stage_1.sh -m training.learning_rate=1e-3,3e-4
 CUDA_VISIBLE_DEVICES=6 back scripts/run_stage_1.sh -m training.learning_rate=1e-4,3e-5
 
-CUDA_VISIBLE_DEVICES=6 back scripts/run_stage_2.sh model_checkpoint_path=\"outputs/stage_1_pretrain/2025-08-07/02-23-47-batch\=4,lr\=0.0003/full_rank_weights.pt\" tag=\"lr\=3e-4\"
-CUDA_VISIBLE_DEVICES=2 back scripts/run_stage_2.sh model_checkpoint_path=\"outputs/stage_1_pretrain/2025-08-07/02-15-08-batch\=4,lr\=0.001/full_rank_weights.pt\" tag=\"lr\=1e-3\"
-CUDA_VISIBLE_DEVICES=2 uv run scripts/continue_selection.py     --router_data_dir outputs/stage_2_selection/2025-08-08/18-30-20-lr=1e-3/router_data     --output_path outputs/stage_2_selection/2025-08-08/18-30-20-lr=1e-3/selected_data.jsonl     --selection_percentage 0.05     --importance_selection_percentage 0.1
+
+
+数据选择
+CUDA_VISIBLE_DEVICES=3 back scripts/run_stage_2.sh model_checkpoint_path=\"outputs/stage_1_pretrain/2025-08-09/02-46-05-batch=4,lr=0.0001/full_rank_weights.pt\" tag=\"lr=1e-4\" data_process.batch_size=16
+
+
+可视化数据
+uv run examples/comprehensive_analysis.py outputs/stage_2_selection/2025-08-09/13-30-44-lr=1e-4/router_data --save-plots --aggregate-datasets
+
+微调
+CUDA_VISIBLE_DEVICES=2 back scripts/run_stage_3.sh dataset.data_path=\"outputs/stage_2_selection/2025-08-09/13-06-09-lr=3e-4/selected_data.jsonl\" tag=\"lr=3e-4\"
+在两个4090上使用更小的batch_size
+CUDA_VISIBLE_DEVICES=1,3 back scripts/run_stage_3.sh dataset.data_path=\"outputs/stage_2_selection/2025-08-09/13-06-09-lr=3e-4/selected_data.jsonl\" tag=\"lr=1e-4\" training.per_device_batch_size=4
