--- a/TODO
+++ b/TODO
@@ -108,3 +108,13 @@ uv run examples/comprehensive_analysis.py outputs/stage_2_selection/2025-08-09/1
 CUDA_VISIBLE_DEVICES=2 back scripts/run_stage_3.sh dataset.data_path=\"outputs/stage_2_selection/2025-08-09/13-06-09-lr=3e-4/selected_data.jsonl\" tag=\"lr=3e-4\"
 在两个4090上使用更小的batch_size
 CUDA_VISIBLE_DEVICES=1,3 back scripts/run_stage_3.sh dataset.data_path=\"dataset/selected_data/mmlu-chat_adam_sim_trainp0.05_seed3_p0.05.jsonl\" tag=\"lr=1e-4\" training.per_device_batch_size=4
+
+不用推土机距离，使用余弦相似度加权和，
+
+聚类后得到簇，从簇中轮流选
+
+一级路由改成输出为一维
+
+sigmoid和softmax？
+
+pretrain过程中mean要考虑有效token
