--- a/TODO
+++ b/TODO
@@ -96,8 +96,16 @@ CUDA_VISIBLE_DEVICES=2 back scripts/run_stage_1.sh -m training.learning_rate=1e-
 CUDA_VISIBLE_DEVICES=6 back scripts/run_stage_1.sh -m training.learning_rate=1e-4,3e-5
 
 预热训练
-CUDA_VISIBLE_DEVICES=2 scripts/run_stage_1.sh training.learning_rate=1e-3 dataset.subset_ratio=0.0001 tag="test"
+CUDA_VISIBLE_DEVICES=2 scripts/run_stage_1.sh training.learning_rate=1e-3 dataset.subset_ratio=0.0001 training.quality_loss_type="beta_moment_matching" tag="test"
 
+CUDA_VISIBLE_DEVICES=2 back scripts/run_stage_1.sh -m training.learning_rate=1e-3,3e-4,1e-4 training.quality_loss_type="beta_moment_matching"
+
+CUDA_VISIBLE_DEVICES=5 back scripts/run_stage_1.sh -m training.learning_rate=1e-3,3e-4,1e-4 training.quality_loss_type="sigmoid"
+
+CUDA_VISIBLE_DEVICES=7 back scripts/run_stage_1.sh -m training.learning_rate=1e-3,3e-4,1e-4 training.quality_loss_type="mean_variance_regularization"
+
+
+ 
 数据选择
 CUDA_VISIBLE_DEVICES=3 back scripts/run_stage_2.sh model_checkpoint_path=\"outputs/stage_1_pretrain/2025-08-09/02-46-05-batch=4,lr=0.0001/full_rank_weights.pt\" tag=\"lr=1e-4\" data_process.batch_size=16
 
@@ -119,3 +127,7 @@ CUDA_VISIBLE_DEVICES=1,3 back scripts/run_stage_3.sh dataset.data_path=\"dataset
 sigmoid和softmax？
 
 pretrain过程中mean要考虑有效token
+
+
+优化方案：
+1. 自定义损失的计算方案：
