--- a/TODO
+++ b/TODO
@@ -126,7 +126,7 @@ CUDA_VISIBLE_DEVICES=1 uv run scripts/continue_selection.py router_data_dir=\"ou
 CUDA_VISIBLE_DEVICES=1 uv run scripts/continue_selection.py
 
 可视化数据
-uv run examples/comprehensive_analysis.py outputs/stage_2_selection/2025-08-09/13-30-44-lr=1e-4/router_data --save-plots --aggregate-datasets
+uv run examples/comprehensive_analysis.py outputs/stage_2_selection/2025-08-11/03-52-40-batch=8_lr=0.0001_loss=beta_moment_matching_tag=none/router_data --aggregate-datasets
 
 微调
 CUDA_VISIBLE_DEVICES=2 back scripts/run_stage_3.sh dataset.data_path=\"outputs/stage_2_selection/2025-08-09/13-06-09-lr=3e-4/selected_data.jsonl\" tag=\"lr=3e-4\"
@@ -150,5 +150,5 @@ pretrain过程中mean要考虑有效token
 2. 是否要除以seq_len以达到数据层面的幅度相同？（现在为是）
 阶段二：
 1. 查看数据分布的特征
-2. 选择合适的聚类算法
+2. 选择合适的聚类算法 （目前聚类算法使用的是原始分数logits还是经过softmax或sigmoid计算得出的概率值？不过问题好像也不大吗？不对，问题很大，应该要统一使用概率值来计算，而不是原始分数）（已经修改了使用softmax，但是要注意提醒其防止使用两次softmax
 
